--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
+# nextflow things
+.nextflow
+.nextflow.log*
+work/
+ref/
+meh/
 .idea
 *.fastq
 *.fq
 *.fastq.gz
 *.fq.gz
-
+HiPore-C/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -164,3 +170,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+HiPore-C
